# dbxmetagen

./: .cursorignore  .gitignore  .pre-commit-config.yaml  ALIGNMENT_INVESTIGATION_FINDINGS.md  APPLY_DDL_BUG_FIX_SUMMARY.md  APPLY_DDL_TEST_SUMMARY.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_COMPLETE.md  COMPLETED_AND_REMAINING.md  CONTRIBUTING.md  FIX_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  NOTICE.md  QUICK_ACTION_GUIDE.md  README.md  RUNNING_TESTS.md  TESTING_SUMMARY.md  TEST_SETUP_COMPLETE.md  WHATS_FIXED.md  apps  cleanup.sh  configurations  databricks.yml  databricks.yml.template  deploy.sh  deploy_spacy.sh  dev.env  example.env  minimal_requirements.txt  publish.sh  pyproject.toml  pytest.ini  requirements-pi.txt  requirements.txt  run_tests.sh  test_exact_string.py  variable-overrides.example.json  (+4 more)
.cursor/rules/: api-server-patterns.mdc  dbxmetagen-ddl.mdc  dbxmetagen-testing.mdc  deployment-context.mdc  frontend-patterns.mdc  genie-patterns.mdc  ontology-patterns.mdc  processing-performance.mdc  test-first.mdc
.github/: README.md
.github/workflows/: ci.yml  integration-tests.yml  regenerate-lock.yml  release.yml  unit-tests.yml
app/: app.py  app.yml  app_env.yml  deploying_user.yml  requirements.txt  variables.yml
app/.streamlit/: config.toml
app/core/: config.py  data_ops.py  jobs.py  user_context.py
app/tests/: __init__.py  test_data_ops.py
app/ui/: components.py
apps/: readme.md
apps/dbxmetagen/: app.py  variables.yml
apps/dbxmetagen-app/: package-lock.json
apps/uc-metadata-assistant/: README.md  app.yaml  app_react.py  settings_manager.py  setup_utils.py
configurations/: README.md  domain_config.yaml  domain_config_financial_services.yaml  domain_config_general.yaml  domain_config_healthcare.yaml  domain_config_retail_cpg.yaml  geo_config.yaml  ontology_config.yaml
configurations/agent_references/: genie_reference.json  metric_view_reference.json
configurations/customer_context/: README.md  example_clinical_trials.yaml
configurations/ontology_bundles/: example_iot.yaml  fhir_r4.yaml  financial_services.yaml  general.yaml  geo_doj.yaml  healthcare.yaml  omop_cdm.yaml  ontology_bundle_v2.schema.json  retail_cpg.yaml  schema_org.yaml
docs/: CONFIGURATION.md  CONSOLIDATED_ROADMAP.md  DEPENDENCIES.md  DOMAIN_ONTOLOGY_ARCHITECTURE.md  ENV_CONFIG.md  ENV_SETUP.md  ENV_VARS.md  KNOWLEDGE_GRAPH_QUERIES.md  MANUAL_DEPLOYMENT.md  MCP_SERVERS.md  MIGRATION.md  PERMISSIONS.md  PERSONAS_AND_WORKFLOWS.md  PRESIDIO_CONFIGURATION.md  QA_CHECKLIST.md  ROADMAP_PARALLEL_WORKERS_HANDOFF.md  consumer-guide.md  formal_semantics.md  metadata_governance_workflow.md  presidio-configuration.md
docs/operations/: README.md  TEST_RUNNER_README.md
eval/: README.md  __init__.py  custom_metrics.py  evaluation_runner.py  example_evaluation.py  prompt_extraction.py
eval/datasets/: __init__.py  evaluation_data.py
example_batch_notebooks/: 05_create_genie_spaces.py  README.md  business_questions.yaml
example_batch_notebooks/helpers/: common.py
examples/: 00_deploy_app.py  01_generate_metadata.py  01_quickstart_metadata.py  02_analytics_pipeline.py  02_build_knowledge_bases.py  03_advanced_analytics.py  03_build_analytics.py  04_generate_semantic_layer.py  README.md
examples/integration/: 01_generate_metadata.py  02_build_knowledge_bases.py  03_build_analytics.py  04_generate_semantic_layer.py  README.md  (+5 more)
notebook_deployment_pipeline/: 01_deploy_app.py  01_deploy_jobs_and_infra.py  02_deploy_app.py  02_deploy_jobs_and_infra.py  README.md
notebooks/: apply_metric_views.py  bootstrap_knowledge_bases.py  build_column_kb.py  build_community_summaries.py  build_customer_context.py  build_knowledge_base.py  build_knowledge_graph.py  build_ontology.py  build_ontology_vector_index.py  build_schema_kb.py  build_similarity_edges.py  build_vector_index.py  classify_geo_columns.py  cleanup_pipeline_tables.py  cluster_analysis.py  compute_data_quality.py  data_generator.py  extract_extended_metadata.py  final_analysis.py  generate_embeddings.py  generate_metadata.py  generate_questions.py  generate_semantic_layer.py  generate_semantic_layer_batched.py  metadata_overrides.csv  phi claud model.py  predict_foreign_keys.py  refresh_ontology_edges.py  run_profiling.py  setup_mcp_servers.py  similarity_analysis.py  sync_graph_to_lakebase.py  sync_reviewed_ddl.py  update_graph_ontology.py  update_graph_quality.py  validate_ontology.py
recipes/: README.md  analytics_pipeline.job.yml  build_vector_index.job.yml  metagen.job.yml
resources/: app_variables.yml  dashboard_queries.sql  dashboards.yml
scripts/: backfill_edge_catalog.py  build_artifacts.sh  build_bundle.py  build_ontology_indexes.py  ci_validate_ontology_bundles.py  cleanup_infrastructure_pollution.py  ensure_public_pypi.sh  export_requirements.sh  generate_bundle_properties.py  generate_fhir_properties.py  grant_app_permissions.sh  inject_ontology_hierarchy.py  ontology_mlflow_eval.py  resolve_fhir_references.py  run_example_notebooks_test.sh  run_integration_tests.sh  validate_ontology_bundles.py
tests/: README.md  README_APP_TESTS.md  STREAMLIT_APP_TESTING.md  __init__.py  alignment_examples.py  conftest.py  data_generator.py  test_agent_improvements.py  test_alignment.py  test_api_routes.py  test_app_config_manager.py  test_app_data_ops.py  test_app_job_manager.py  test_app_logic.py  test_app_user_context.py  test_apply_ddl_flag.py  test_binary_variant_types.py  test_build_ontology_indexes.py  test_cleanup_utils.py  test_column_knowledge_base.py  test_comment_style.py  test_comment_summarizer.py  test_community_summaries.py  test_concurrent_tasks.py  test_config_parsing.py  test_contracts.py  test_customer_context.py  test_data_quality.py  test_data_signal_integration.py  test_ddl_generation.py  test_ddl_regenerator.py  test_deployment_wiring.py  test_domain_classifier.py  test_domain_classifier_extended.py  test_domain_classifier_integration.py  test_domain_sources.py  test_embeddings.py  test_evaluation.py  test_evaluation_composite.py  test_evaluation_integration.py  (+51 more)
(+390 files in other folders)
