[project]
name = "dbxmetagen"
version = "0.9.3+1778800617"
description = "Generates comments and identifies and classifies other metadata for Delta tables in Databricks."
readme = "README.md"
authors = [{ name = "Eli Swanson", email = "eli.swanson@databricks.com" }]
license = { text = "DB License" }
requires-python = ">=3.10.12,<3.14.0"
dependencies = []

# All runtime deps are optional -- the wheel installs with zero dep resolution.
# DBR ML Runtime provides the heavy packages (mlflow, ydata-profiling, etc.).
# Non-DBR deps are added as pypi entries in job YAML libraries blocks.
#   Local dev:  uv sync --extra all
#   PI mode:    uv sync --extra all --extra pi
[project.optional-dependencies]
all = [
    "mlflow==3.6.0",
    "openai==1.56.1",
    "cloudpickle==3.1.0",
    "pydantic==2.10.3",
    "ydata-profiling>=4.12.1,<5",
    "databricks-langchain==0.4.0",
    "databricks-sdk==0.68.0",
    "openpyxl==3.1.5",
    "deprecated==1.2.13",
    "pyyaml==6.0.1",
    "requests==2.32.5",
    "nest-asyncio>=1.6.0,<2",
]
pi = [
    "spacy==3.8.7",
    "presidio-analyzer==2.2.358",
    "en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
]
pi-lg = [
    "spacy==3.8.7",
    "presidio-analyzer==2.2.358",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
]
ontology = ["rdflib>=6.3.0", "pyoxigraph>=0.3.0"]

[project.scripts]
main = "dbxmetagen.main:main"

[dependency-groups]
dev = ["pre-commit>=4.0.1,<5", "pytest>=8.3.4", "rdflib>=6.3.0", "hypothesis>=6.100.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dbxmetagen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--ignore=notebooks/integration_tests --ignore=tests/test_app_logic.py"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "app: marks tests as legacy app tests (run separately due to mocking)",
]
